--- a/breakout.html
+++ b/breakout.html
@@ -9,7 +9,7 @@
 <body>
 <h1>BREAKOUT</h1>
 <button id="rules-btn" class="btn rules-btn">SHOW RULES</button>
-<div id="rules" class="rules">
+<div id="rules" class="rules show">
     <h2>HOW TO PLAY:</h2>
     <p>Use you rirght and left keys to move the paddle to bounce the ball upa nd brek the blocks.</p>
     <p>If you miss the ball, your score and the blocks reset.</p>
