--- a/breakout.html
+++ b/breakout.html
@@ -11,7 +11,7 @@
 <button id="rules-btn" class="btn rules-btn">SHOW RULES</button>
 <div id="rules" class="rules show">
     <h2>HOW TO PLAY:</h2>
-    <p>Use you rirght and left keys to move the paddle to bounce the ball upa nd brek the blocks.</p>
+    <p>Use you right and left keys to move the paddle to bounce the ball up and brek the blocks.</p>
     <p>If you miss the ball, your score and the blocks reset.</p>
     <button id="close-btn" class="btn">CLOSE</button>
 </div>
