--- a/breakout.html
+++ b/breakout.html
@@ -9,6 +9,7 @@
 <body>
 <h1>BREAKOUT</h1>
 <button id="rules-btn" class="btn rules-btn">SHOW RULES</button>
+<button id="start-btn" class ="btn start.btn">START</button>
 <div id="rules" class="rules show">
     <h2>HOW TO PLAY:</h2>
     <p>Use you right and left keys to move the paddle to bounce the ball up and brek the blocks.</p>
