--- a/breakout.html
+++ b/breakout.html
@@ -9,11 +9,11 @@
 <body>
 <h1>BREAKOUT</h1>
 <button id="rules-btn" class="btn rules-btn">SHOW RULES</button>
-<button id="start-btn" class ="btn start.btn">START</button>
+<button id="start-btn" class ="btn start-btn">START</button>
 <div id="rules" class="rules show">
     <h2>HOW TO PLAY:</h2>
     <p>Use you right and left keys to move the paddle to bounce the ball up and brek the blocks.</p>
-    <p>If you miss the ball, your score and the blocks reset.</p>
+    <p>If you miss the ball, your score and the blocks reset. If the ball gets stuck underneath the paddle, press "start" until it unsticks</p>
     <button id="close-btn" class="btn">CLOSE</button>
 </div>
 
