Mon, Apr 8, 2024, 2:37 PM -07:00

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h>This is my 2nd Website!</h>
     <ul>
-    <li><a></a></li>
+    <li id="link1"><a href="breakout.html">Breakout</a></li>
+    <li id = "link2"><a href="insect.html">Insect</a></li>
     </ul>
 
 </body>
