--- a/insect.html
+++ b/insect.html
@@ -18,7 +18,25 @@
         <li>
             <button class="insect-choice-btn">
                 <p>FLY</p>
-                <img src="" alt="">
+                <img src="images/fly.png" alt="FLY">
+            </button>
+        </li>
+        <li>
+            <button class="insect-choice-btn">
+                <p>MOSQUITO</p>
+                <img src="images/mosquito.png" alt="MOSQUITO">
+            </button>
+        </li>
+        <li>
+            <button class="insect-choice-btn">
+                <p>SPIDER</p>
+                <img src="images/spider.png" alt="SPIDER">
+            </button>
+        </li>
+        <li>
+            <button class="insect-choice-btn">
+                <p>ROACH</p>
+                <img src="images/roach.png" alt="ROACH">
             </button>
         </li>
     </ul>
