--- a/insect.html
+++ b/insect.html
@@ -12,7 +12,7 @@
     <button class="btn" id="start-btn">Play Game</button>
 </div>
 
-<div>
+<div class="screen">
     <h1>What is your "favorite" insect?</h1>
     <ul class="insects-list">
         <li>
@@ -42,6 +42,13 @@
     </ul>
 </div>
 
+<div class="screen game-container" id="game-container">
+<h3 class="time" id="time">TIME: 00:00</h3>
+<h3 class="score" id="score">SCORE: 0</h3>
+<h5 class="message" id="message">Are you bored yet? <br>
+There is no end.
+</h5>
+</div>
 </body>
 <script src="js/insect.js"></script>
 </html>
