Thu, Apr 18, 2024, 2:16 PM -07:00

--- a/hangman.html
+++ b/hangman.html
@@ -27,6 +27,32 @@
         <line x1="140" y1="150" x2="120" y2="180"class="figure-part"/>
         <line x1="140" y1="150" x2="160" y2="180"class="figure-part"/>
     </svg>
+
+    <div class="wrong-letters-container">
+        <div id="wrongletters">
+            <p>Wrong</p>
+            <span>a,b,c,d,f,g</span>
+        </div>
+        <div class="word" id="word">
+            <div class="letter">h</div>
+            <div class="letter">e</div>
+            <div class="letter">l</div>
+            <div class="letter">l</div>
+            <div class="letter">o</div>
+        </div>
+    </div>
+</div>
+<!-- Container For Final Message -->
+<div class="popup-container" id="popup-container">
+    <div class="popup">
+        <h2 id="final-message">Winner</h2>
+        <button id="play-button">PlayAgain</button>
+    </div>
+</div>
+
+<!-- Notification -->
+<div class="notification-container" id="notification-container">
+    <p>You already tried that</p>
 </div>
 </body>
 <script src="js/hangman.js"></script>
