Fri, Apr 19, 2024, 2:16 PM -07:00

--- a/insect.html
+++ b/insect.html
@@ -16,27 +16,27 @@
     <h1>What is your "favorite" insect?</h1>
     <ul class="insects-list">
         <li>
-            <button class="insect-choice-btn">
+            <button class="css/insect-choice-btn">
                 <p>FLY</p>
-                <img src="images/fly.png" alt="FLY">
+                <img src="css/images/fly.png" alt="FLY">
             </button>
         </li>
         <li>
             <button class="insect-choice-btn">
                 <p>MOSQUITO</p>
-                <img src="images/mosquito.png" alt="MOSQUITO">
+                <img src="css/images/mosquito.png" alt="MOSQUITO">
             </button>
         </li>
         <li>
             <button class="insect-choice-btn">
                 <p>SPIDER</p>
-                <img src="images/spider.png" alt="SPIDER">
+                <img src="css/images/spider.png" alt="SPIDER">
             </button>
         </li>
         <li>
             <button class="insect-choice-btn">
                 <p>ROACH</p>
-                <img src="images/roach.png" alt="ROACH">
+                <img src="css/images/roach.png" alt="ROACH">
             </button>
         </li>
     </ul>
