--- a/hangman.html
+++ b/hangman.html
@@ -29,24 +29,15 @@
     </svg>
 
     <div class="wrong-letters-container">
-        <div id="wrongletters">
-            <p>Wrong</p>
-            <span>a,b,c,d,f,g</span>
-        </div>
+        <div id="wrongletters"></div>
     </div>
-        <div class="word" id="word">
-            <div class="letter">h</div>
-            <div class="letter">e</div>
-            <div class="letter">l</div>
-            <div class="letter">l</div>
-            <div class="letter">o</div>
-        </div>
+        <div class="word" id="word"></div>
 
 </div>
 <!-- Container For Final Message -->
 <div class="popup-container" id="popup-container">
     <div class="popup">
-        <h2 id="final-message">Winner</h2>
+        <h2 id="final-message"></h2>
         <button id="play-button">PlayAgain</button>
     </div>
 </div>
