--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
     <li id="link1"><a href="breakout.html">Breakout</a></li>
     <li id = "link2"><a href="insect.html">Insect</a></li>
+    <li id = "link3"><a href="hangman.html">Hangman</a></li>
     </ul>
 
 </body>
