--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>website2</title>
+    <title>Hunter'sWebsite2</title>
+    <link rel="stylesheet" href="css/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h>This is my 2nd Website!</h>
-    <ul>
-    <li id="link1"><a href="breakout.html">Breakout</a></li>
-    <li id = "link2"><a href="insect.html">Insect</a></li>
-    <li id = "link3"><a href="hangman.html">Hangman</a></li>
-    </ul>
-
+    <nav class="nav">
+        <div class="container">
+        <h1>Games</h1>
+        <ul>
+        <li id="link1"><a href="breakout.html">1. Breakout</a></li>
+        <li id="link2"><a href="insect.html">2. Insect</a></li>
+        <li id="link3"><a href="hangman.html">3. Hangman</a></li>
+        </ul>
+        </div>
+    </nav>
+<div class="hero">
+    <div class="container"><h1>Hunter's Website 2</h1>
+        <p>AP Computer Science Period 7</p>
+    </div>
+</div>
 </body>
+<script src="js/index.js"></script>
 </html>
