--- a/hangman.html
+++ b/hangman.html
@@ -40,6 +40,7 @@
         <div class="popup">
             <h2 id="final-message"></h2>
             <button id="play-button">Play Again</button>
+            <a href="index.html">Homepage</a>
         </div>
     </div>
 
