--- a/insect.html
+++ b/insect.html
@@ -47,6 +47,7 @@
         <h5 id="message" class="message">
             Are you annoyed yet? <br>
             You are playing an impossible game!!
+            <a href="index.html">Homepage</a>
         </h5>
 
         <h1 id="W" class="message">
