--- a/breakout.html
+++ b/breakout.html
@@ -14,6 +14,7 @@
     <h2>HOW TO PLAY:</h2>
     <p>Use you right and left keys to move the paddle to bounce the ball up and brek the blocks.</p>
     <p>If you miss the ball, your score and the blocks reset. If the ball gets stuck underneath the paddle, press "start" until it unsticks</p>
+    <a href="index.html">Homepage</a>
     <button id="close-btn" class="btn">CLOSE</button>
 </div>
 
