--- a/insect.html
+++ b/insect.html
@@ -52,10 +52,12 @@
 
         <h1 id="W" class="message">
             You Win!!
+            <a href="index.html">Homepage</a>
         </h1>
 
         <h2 id="L" class="message">
             You Lose!!
+            <a href="index.html">Homepage</a>
         </h2>
     </div>
 </body>
